--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ input {
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 48px;
     position: relative;
-    margin: 40px 0;
+    margin: 30px 0;
 }
 
 h1::before {
@@ -90,12 +90,24 @@ label:hover {
     margin: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+    grid-gap: 30px;
+}
+
+@media (max-width: 800px) {
+    .gallery {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 400px) {
+    .gallery {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 .pic {
     position: relative;
-    height: 400px;
+    max-height: 300px;
     /* border-radius: 5px; */
     /* box-shadow: 2px 2px 4px lightgray; */
 }
@@ -103,5 +115,42 @@ label:hover {
 .pic img {
     width: 100%;
     height: 100%;
+    cursor: pointer;
     /* border-radius: 5px; */
+    transition: all 1s ease;
+}
+
+.pic img:hover {
+    transform: scale(1.1);
+}
+
+.popup-image {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .8);
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+}
+
+.popup-image span {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    font-size: 100px;
+    font-weight: bolder;
+    color: white;
+    cursor: pointer;
+    z-index: 100;
+}
+
+.popup-image img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 750px;
+    object-fit: cover;
 }
