--- a/style.css
+++ b/style.css
@@ -59,6 +59,8 @@ h1::before {
     box-shadow: 5px 5px 5px lightgray;
 }
 
+
+
 h3 {
     height: 100%;
     background-color: rgb(235, 235, 235);
@@ -83,6 +85,25 @@ label {
 label:hover {
     color: black;
     font-weight: 600;
+}
+
+@media (max-width:500px) {
+    h1 {
+        font-size: 32px;
+    }
+
+    h3 {
+        display: none;
+    }
+
+    .top-content {
+        justify-content: space-around;
+    }
+
+    label {
+        font-size: 16px;
+        margin: 0;
+    }
 }
 
 .gallery {
